# SNDrift

./: CMakeLists.txt  FindROOT.cmake  README.md
data/: trackergasCS.root  trackergeom.gdml
examples/: mcdrift.cpp  scan.cpp
include/: ctransport.hh  electrode.hh  fields.hh  geomodel.hh  utils.hh
src/: collection.cpp  electrode.cpp  fields.cpp  geomodel.cpp  utils.cpp
testing/: trial.cpp
utils/: cs2root.py  gasfile.C  rootconverter2D.py  trackergeom.cpp
